finished the project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Uncomment line 8 to see the results of my solution -->
     <script defer src="./main.js"></script>
+    <!-- Unncomment line 10 to see the results of CodeCademy solution -->
+    <!-- <script defer src="./main-solution.js"></script> -->
     <title>Document</title>
 </head>
 <body>
